So much stuff but maily neovim in lua

--- a/dot_config/fontconfig/fonts.conf
+++ b/dot_config/fontconfig/fonts.conf
@@ -26,7 +26,14 @@
   <alias>
     <family>monospace</family>
     <prefer>
-      <family>Victor Code Pro</family>
+      <family>SauceCodePro Nerd Font Mono</family>
+      <family>Symbola</family>
+    </prefer>
+  </alias>
+  <alias>
+    <family>italic</family>
+    <prefer>
+      <family>VictorMono Nerd Font Mono</family>
       <family>Symbola</family>
     </prefer>
   </alias>
