--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -98,7 +98,7 @@ bindsym $mod+p exec $menu
 bindsym $mod+Return exec $menu
 # other
 bindsym $mod+Control+a exec $term -e calcurse
-bindsym $mod+Control+c exec $term -e python
+bindsym $mod+Control+c exec $term -e codi
 bindsym $mod+Control+Shift+c exec $term -e mmaxima
 bindsym $mod+Control+e exec XDG_SESSION_TYPE=x11 GDK_BACKEND=x11 MOZ_ENABLE_WAYLAND=0 QT_QPA_PLATFORM="xcb" birdtray -t
 bindsym $mod+Control+f exec $term -e lfcd_sh
