--- a/dot_config/fontconfig/fonts.conf
+++ b/dot_config/fontconfig/fonts.conf
@@ -26,14 +26,14 @@
   <alias>
     <family>monospace</family>
     <prefer>
-      <family>SauceCodePro Nerd Font Mono</family>
+      <family>SauceCodePro NFM</family>
       <family>Symbola</family>
     </prefer>
   </alias>
   <alias>
     <family>italic</family>
     <prefer>
-      <family>VictorMono Nerd Font Mono</family>
+      <family>VictorMono NFM</family>
       <family>Symbola</family>
     </prefer>
   </alias>
