--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -1,7 +1,7 @@
 {
-    "layer": "bottom",
+    "layer": "top",
     "modules-left": [
-        "sway/workspaces",
+        "hyprland/workspaces",
         "sway/mode"
     ],
     "modules-center": [
