Update dot bot and some config stuff

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -143,7 +143,7 @@ exec-once = mpd
 # clipboard persistence (only text)
 # exec-once = wl-clip-persist --clipboard regular --ignore-event-on-error --selection-size-limit 10485760 --all-mime-type-regex '(?i)^(?!(?:image|audio|video|font|model)/).+'
 # clipboard for wine apps
-exec-once = sleep 1 && wl-paste -t text -w xclip -selection clipboard
+# exec-once = sleep 1 && wl-paste -t text -w xclip -selection clipboard
 # email client
 exec-once = thunderbird
 
