--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -100,9 +100,6 @@ dwindle {
 }
 
 master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
-
     no_gaps_when_only = 1
 }
 
@@ -143,7 +140,7 @@ exec-once = mpd
 # clipboard persistence (only text)
 # exec-once = wl-clip-persist --clipboard regular --ignore-event-on-error --selection-size-limit 10485760 --all-mime-type-regex '(?i)^(?!(?:image|audio|video|font|model)/).+'
 # clipboard for wine apps
-# exec-once = sleep 1 && wl-paste -t text -w xclip -selection clipboard
+exec-once = sleep 1 && wl-paste -t text -w xclip -selection clipboard
 # email client
 exec-once = thunderbird
 
@@ -154,6 +151,7 @@ exec-once = thunderbird
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2 = stayfocused, title:^()$,class:^(steam)$
 windowrule = workspace special:thunderbird silent, thunderbird
 
 # Key bindings
