Use swayidle and swaylock

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -9,11 +9,11 @@ $term = alacritty
 $fileManager = alacritty -e lfcd_sh
 $browser = librewolf
 $menu = mdmenu_run | xargs hyprctl dispatch exec --
-$lockscreen = swaylock -f --screenshots --clock --indicator-idle-visible --fade-in 10 --effect-greyscale --effect-blur 5x10 --grace 10
 
 # Some default env vars.
+# cursor theme
+# env = HYPRCURSOR_THEME,Nordzy-cursors-hyprcursor
 env = XCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -135,7 +135,6 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 # X11 theme stuff
 exec-once = xrdb -load "$HOME/.Xdefaults"
 # exec trayscale --hide-window --gapplication-service
-# exec XDG_SESSION_TYPE=x11 GDK_BACKEND=x11 MOZ_ENABLE_WAYLAND=0 QT_QPA_PLATFORM="xcb" birdtray
 exec-once = mpd
 # clipboard persistence (only text)
 # exec-once = wl-clip-persist --clipboard regular --ignore-event-on-error --selection-size-limit 10485760 --all-mime-type-regex '(?i)^(?!(?:image|audio|video|font|model)/).+'
@@ -143,6 +142,8 @@ exec-once = mpd
 exec-once = sleep 1 && wl-paste -t text -w xclip -selection clipboard
 # email client
 exec-once = thunderbird
+# idle
+exec-once = hypridle
 
 
 # Example windowrule v1
@@ -153,6 +154,12 @@ exec-once = thunderbird
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = stayfocused, title:^()$,class:^(steam)$
 windowrule = workspace special:thunderbird silent, thunderbird
+# xwaylandvideobridge hide
+windowrulev2 = opacity 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
+windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 
 # Key bindings
 #
@@ -172,7 +179,7 @@ bind = $mod+SHIFT+CONTROL, R, exec, hyprctl reload
 # kill focused window
 bind = $alt, F4, killactive,
 # lock screen
-bind = $mod, F12, exec, $lockscreen --fade-in 0 --grace 0
+bind = $mod, F12, exec, hyprlock
 # toggle bar
 bind = $mod, B, exec, killall -SIGUSR1 waybar
 
