--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -14,6 +14,7 @@ $menu = mdmenu_run | xargs hyprctl dispatch exec --
 # cursor theme
 # env = HYPRCURSOR_THEME,Nordzy-cursors-hyprcursor
 env = XCURSOR_SIZE,24
+env = QT_QPA_PLATFORMTHEME,qt6ct
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -155,11 +156,11 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = stayfocused, title:^()$,class:^(steam)$
 windowrule = workspace special:thunderbird silent, thunderbird
 # xwaylandvideobridge hide
-windowrulev2 = opacity 0.0 override,class:^(xwaylandvideobridge)$
-windowrulev2 = noanim,class:^(xwaylandvideobridge)$
-windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
-windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
-windowrulev2 = noblur,class:^(xwaylandvideobridge)$
+# windowrulev2 = opacity 0.0 override,class:^(xwaylandvideobridge)$
+# windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+# windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+# windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
+# windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 
 # Key bindings
 #
