More hyprland lock and idle stuff

--- a/dot_config/hypr/hypridle.conf
+++ b/dot_config/hypr/hypridle.conf
@@ -10,12 +10,12 @@ listener {
     on-resume = screen_brightness_ctl.sh restore # monitor backlight restore.
 }
 
-# turn off keyboard backlight, comment out this section if you dont have a keyboard backlight.
-# listener { 
-#     timeout = 150                                          # 2.5min.
-#     on-timeout = brightnessctl -sd rgb:kbd_backlight set 0 # turn off keyboard backlight.
-#     on-resume = brightnessctl -rd rgb:kbd_backlight        # turn on keyboard backlight.
-# }
+# turn off keyboard backlight
+listener { 
+    timeout = 150                                          # 2.5min.
+    on-timeout = brightnessctl -sd rgb:kbd_backlight set 0 # turn off keyboard backlight.
+    on-resume = brightnessctl -rd rgb:kbd_backlight        # turn on keyboard backlight.
+}
 
 listener {
     timeout = 300                                 # 5min
@@ -23,12 +23,12 @@ listener {
 }
 
 listener {
-    timeout = 330                                 # 5.5min
-    on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on ; screen_brightness_ctl.sh restore          # screen on when activity is detected after timeout has fired.
+    timeout = 330                                                           # 5.5min
+    on-timeout = hyprctl dispatch dpms off                                  # screen off when timeout has passed
+    on-resume = hyprctl dispatch dpms on ; screen_brightness_ctl.sh restore # screen on when activity is detected after timeout has fired.
 }
 
 listener {
-    timeout = 1800                                # 30min
-    on-timeout = systemctl suspend ; screen_brightness_ctl.sh restore               # suspend pc
+    timeout = 1800                                                      # 30min
+    on-timeout = systemctl suspend ; screen_brightness_ctl.sh restore   # suspend pc
 }
