--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -156,11 +156,11 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = stayfocused, title:^()$,class:^(steam)$
 windowrule = workspace special:thunderbird silent, thunderbird
 # xwaylandvideobridge hide
-# windowrulev2 = opacity 0.0 override,class:^(xwaylandvideobridge)$
-# windowrulev2 = noanim,class:^(xwaylandvideobridge)$
-# windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
-# windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
-# windowrulev2 = noblur,class:^(xwaylandvideobridge)$
+windowrulev2 = opacity 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
+windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 
 # Key bindings
 #
