--- a/dot_config/hypr/hyprlock.conf
+++ b/dot_config/hypr/hyprlock.conf
@@ -1,12 +1,13 @@
 background {
     monitor =
     # path = ~/.local/share/wallpaper/anorlondo/anorlondo.png
-    color = rgba(25, 20, 20, 0.5)
+    # color = rgba(0, 0, 0, 0.7)
+    path = screenshot
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
-    # blur_passes = 0 # 0 disables blurring
-    blur_size = 7
-    noise = 0.0117
+    blur_passes = 2 # 0 disables blurring
+    blur_size = 3
+    noise = 0.0
     contrast = 0.8916
     brightness = 0.8172
     vibrancy = 0.1696
