--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -1,7 +1,6 @@
 source = ~/.config/hypr/ifgdt_monitors.conf
 
 # load plugins
-#exec-once = hyprpm enable hyprtags && hyprpm reload -n
 exec-once = hyprpm reload -n
 
 # Set programs that you use
@@ -145,6 +144,8 @@ exec-once = sleep 1 && wl-paste -t text -w xclip -selection clipboard
 exec-once = thunderbird
 # idle
 exec-once = hypridle
+# auto mount devices
+exec-once = udiskie &
 
 
 # Example windowrule v1
