numbat keybind and mmaxima script fix

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -196,7 +196,8 @@ bind = $mod, P, exec, $menu
 bind = $mod, RETURN, exec, $menu
 # other
 bind = $mod+CONTROL, A, exec, $term -e calcurse
-bind = $mod+CONTROL, C, exec, $term -e codi
+bind = $mod+CONTROL, C, exec, $term -e numbat
+bind = $mod++SHIFT,  C, exec, $term -e codi
 bind = $mod+CONTROL+SHIFT, C, exec, $term -e mmaxima
 #bind = $mod+CONTROL, E, exec, XDG_SESSION_TYPE=x11 GDK_BACKEND=x11 MOZ_ENABLE_WAYLAND=0 QT_QPA_PLATFORM="xcb" birdtray -t
 bind = $mod+CONTROL, E, exec, thunderbird && hyprctl dispatch togglespecialworkspace thunderbird
