Add script to change default sink

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -223,6 +223,7 @@ bind = , XF86Display, exec, brightnessctl -r
 # audio
 bind = $mod, F8, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind = $mod+SHIFT, F8, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bind = $mod+CONTROL, F8, exec, next_sink.sh
 bind = $mod, F9, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = $mod, F10, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 #
