--- a/dot_config/gtk-3.0/settings.ini
+++ b/dot_config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
 gtk-theme-name=Arc-Dark-solid
-gtk-icon-theme-name=breeze-dark
+gtk-icon-theme-name=Arc
 gtk-font-name=Source Han Sans 11
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
