Clipse is great. Use it

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -136,10 +136,8 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = xrdb -load "$HOME/.Xdefaults"
 # exec trayscale --hide-window --gapplication-service
 exec-once = mpd
-# clipboard persistence (only text)
-# exec-once = wl-clip-persist --clipboard regular --ignore-event-on-error --selection-size-limit 10485760 --all-mime-type-regex '(?i)^(?!(?:image|audio|video|font|model)/).+'
-# clipboard for wine apps
-exec-once = sleep 1 && wl-paste -t text -w xclip -selection clipboard
+# clipboard persistence
+exec-once = clipse -listen
 # email client
 exec-once = thunderbird
 # idle
@@ -148,11 +146,7 @@ exec-once = hypridle
 exec-once = udiskie &
 
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+# See https://wiki.hyprland.org/Configuring/Window-Rules
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = stayfocused, title:^()$,class:^(steam)$
 windowrule = workspace special:thunderbird silent, thunderbird
@@ -162,6 +156,9 @@ windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
+# clipse floating window
+windowrulev2 = float,class:(clipse)
+windowrulev2 = size 622 652,class:(clipse)
 
 # Key bindings
 #
@@ -199,6 +196,7 @@ bind = $mod+CONTROL, A, exec, $term -e calcurse
 bind = $mod+CONTROL, C, exec, $term -e numbat
 bind = $mod++SHIFT,  C, exec, $term -e codi
 bind = $mod+CONTROL+SHIFT, C, exec, $term -e mmaxima
+bind = $mod, V, exec, alacritty --class clipse -e clipse
 #bind = $mod+CONTROL, E, exec, XDG_SESSION_TYPE=x11 GDK_BACKEND=x11 MOZ_ENABLE_WAYLAND=0 QT_QPA_PLATFORM="xcb" birdtray -t
 bind = $mod+CONTROL, E, exec, thunderbird && hyprctl dispatch togglespecialworkspace thunderbird
 bind = $mod+CONTROL, F, exec, $fileManager
@@ -333,8 +331,9 @@ bind = $mod+SHIFT, Period, movewindow, mon:+1
 # Layouts:
 #
 bind = $mod+SHIFT, Space, togglefloating,
-bind = $mod+SHIFT, F, fullscreen, 0
-bind = $mod, F, fakefullscreen,
+# bind = $mod+SHIFT, F, fullscreen, 0
+# bind = $mod, F, fakefullscreen,
+bind = $mod, F, fullscreen, 0
 # Example special workspace (scratchpad)
 bind = $mod, Q, togglespecialworkspace, magic
 bind = $mod+SHIFT, Q, tags-movetoworkspacesilent, special:magic
