Use wayland for electron apps and add g script completion

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -172,7 +172,7 @@ $alt = ALT
 #
 # exit Hyprland. Hyprland would hang while waiting for swaynag to exit,
 # so I added the killall cmd.
-bind = $mod+SHIFT+CONTROL, Q, exec, swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit Hyprland? This will end your Hyprland session.' -B 'Yes, exit Hyprland' 'hyprctl dispatch exit && killall swaynag'
+bind = $mod+SHIFT+CONTROL, Q, exec, hyprctl dispatch exit
 # reload Hyprland
 bind = $mod+SHIFT+CONTROL, R, exec, hyprctl reload
 # kill focused window
