Moving every daemon autostart to systemd --user

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -13,7 +13,6 @@ $menu = mdmenu_run | xargs hyprctl dispatch exec --
 # cursor theme
 # env = HYPRCURSOR_THEME,Nordzy-cursors-hyprcursor
 env = XCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt6ct
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -124,26 +123,10 @@ misc {
 # Autoruns
 # Import GTK 3 to gsettings
 exec-once = import-gsettings
-# notification daemon (when already running, does nothing)
-exec-once = swaync
-# wallpaper
-exec-once = hyprpaper
-# bar
-exec-once = waybar
-# auth agent
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
 # X11 theme stuff
 exec-once = xrdb -load "$HOME/.Xdefaults"
-# exec trayscale --hide-window --gapplication-service
-exec-once = mpd
-# clipboard persistence
-exec-once = clipse -listen
 # email client
 exec-once = thunderbird
-# idle
-exec-once = hypridle
-# auto mount devices
-exec-once = udiskie &
 
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules
@@ -339,4 +322,4 @@ bind = $mod, Q, togglespecialworkspace, magic
 bind = $mod+SHIFT, Q, tags-movetoworkspacesilent, special:magic
 
 # for xdg-desktop-portal-hyprland
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=dbus-update-activation-environment --systemd --all; systemctl --user start hyprland-session.target
