Moving more things towards systemd --user
Also finally fix gamemode_end

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -10,6 +10,10 @@ $browser = librewolf
 $menu = mdmenu_run | xargs hyprctl dispatch exec --
 
 # Some default env vars.
+# these XDG vars should be set automatically but we set them here aswell (just in case)
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 # cursor theme
 # env = HYPRCURSOR_THEME,Nordzy-cursors-hyprcursor
 env = XCURSOR_SIZE,24
@@ -49,13 +53,13 @@ general {
     border_size = 1
     no_border_on_floating = true
     resize_on_border = true
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(ef926eee) rgba(8ad3eaee) 45deg
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
 
-    # See https://wiki.hyprland.org/Configuring/Tearing/
-    allow_tearing = false
+    # See https://wiki.hyprland.org/Configuring/Tearing
+    allow_tearing = true
 }
 
 decoration {
@@ -91,9 +95,13 @@ animations {
 }
 
 dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
+    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout
+    # pseudotiled windows retain their floating size when tiled
+    pseudotile = yes
+    # if enabled, the split (side/top) will not change regardless of what happens to the container
+    preserve_split = yes
+    # 0 -> split follows mouse, 1 -> always split to the left (new = left or top) 2 -> always split to the right (new = right or bottom)
+    force_split = 0
 
     no_gaps_when_only = 1
 }
@@ -111,8 +119,12 @@ misc {
     disable_hyprland_logo = true
     disable_splash_rendering = true
 
-    # Variable refresh rate of the monitor
+    vfr = true
+    # Variable refresh rate of the monitor: 0 - off, 1 - on, 2 - fullscreen only
     vrr = 2
+
+    animate_manual_resizes = false
+    animate_mouse_windowdragging = false
     
     # Disables direct scanout. Direct scanout attempts to reduce
     # lag when there is only one fullscreen application on a screen (e.g. game).
@@ -121,8 +133,6 @@ misc {
 }
 
 # Autoruns
-# Import GTK 3 to gsettings
-exec-once = import-gsettings
 # X11 theme stuff
 exec-once = xrdb -load "$HOME/.Xdefaults"
 # email client
@@ -133,6 +143,7 @@ exec-once = thunderbird
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = stayfocused, title:^()$,class:^(steam)$
 windowrule = workspace special:thunderbird silent, thunderbird
+windowrulev2 = workspace name:9,class:LibreWolf
 # xwaylandvideobridge hide
 windowrulev2 = opacity 0.0 override,class:^(xwaylandvideobridge)$
 windowrulev2 = noanim,class:^(xwaylandvideobridge)$
@@ -142,6 +153,8 @@ windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 # clipse floating window
 windowrulev2 = float,class:(clipse)
 windowrulev2 = size 622 652,class:(clipse)
+
+workspace = special:magic, on-created-empty:$term
 
 # Key bindings
 #
@@ -234,10 +247,10 @@ bind = , XF86Search, exec, $menu
 #
 # Notifications:
 #
-bind = $mod, F11, exec, swaync-client -d -sw
-bind = $mod+CONTROL, backslash, exec, swaync-client --close-latest -sw
-bind = $mod+CONTROL+SHIFT, backslash, exec, swaync-client --close-all -sw
-bind = $mod+CONTROL, Space, exec, swaync-client -t -sw
+bind = $mod, F11, exec, swaync-client -d -sw # toggle dnd
+bind = $mod, backspace, exec, swaync-client --close-latest -sw # dismiss last
+bind = $mod+SHIFT, backspace, exec, swaync-client --close-all -sw # dismiss all
+bind = $mod+CONTROL, backspace, exec, swaync-client -t -sw # show notifications
 
 #
 # Screenshots:
@@ -313,10 +326,8 @@ bind = $mod+SHIFT, Period, movewindow, mon:+1
 #
 # Layouts:
 #
+bind = $mod, Space, fullscreen, 0
 bind = $mod+SHIFT, Space, togglefloating,
-# bind = $mod+SHIFT, F, fullscreen, 0
-# bind = $mod, F, fakefullscreen,
-bind = $mod, F, fullscreen, 0
 # Example special workspace (scratchpad)
 bind = $mod, Q, togglespecialworkspace, magic
 bind = $mod+SHIFT, Q, tags-movetoworkspacesilent, special:magic
