--- a/dot_config/hypr/hyprpaper.conf
+++ b/dot_config/hypr/hyprpaper.conf
@@ -7,7 +7,7 @@ preload = ~/.local/share/wallpaper/ds_2.png
 wallpaper =, ~/.local/share/wallpaper/ds_1.png
 
 wallpaper = DP-1, ~/.local/share/wallpaper/ds_1.png
-wallpaper = HDMI-A-1, ~/.local/share/wallpaper/ds_2.png
+wallpaper = DP-2, ~/.local/share/wallpaper/ds_2.png
 
 # enable splash text rendering over the wallpaper
 splash = false
