--- a/dot_config/hypr/ifgdt_monitors.conf
+++ b/dot_config/hypr/ifgdt_monitors.conf
@@ -1,5 +1,5 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,highrr,auto,1
+monitor=,highres,auto,1
 
 # monitor=DP-1,2560x1440@144,1080x480,1
 # monitor=DP-2,1920x1080@144,0x0,1,transform,1
