--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -99,9 +99,9 @@ dwindle {
     # pseudotiled windows retain their floating size when tiled
     pseudotile = yes
     # if enabled, the split (side/top) will not change regardless of what happens to the container
-    preserve_split = yes
+    preserve_split = no
     # 0 -> split follows mouse, 1 -> always split to the left (new = left or top) 2 -> always split to the right (new = right or bottom)
-    force_split = 0
+    force_split = 2
 
     no_gaps_when_only = 1
 }
@@ -123,13 +123,8 @@ misc {
     # Variable refresh rate of the monitor: 0 - off, 1 - on, 2 - fullscreen only
     vrr = 2
 
-    animate_manual_resizes = false
+    animate_manual_resizes = true
     animate_mouse_windowdragging = false
-    
-    # Disables direct scanout. Direct scanout attempts to reduce
-    # lag when there is only one fullscreen application on a screen (e.g. game).
-    # It is also recommended to set this to true if the fullscreen application shows graphical glitches.
-    no_direct_scanout = true
 }
 
 # Autoruns
@@ -143,7 +138,6 @@ exec-once = thunderbird
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = stayfocused, title:^()$,class:^(steam)$
 windowrule = workspace special:thunderbird silent, thunderbird
-windowrulev2 = workspace name:9,class:LibreWolf
 # xwaylandvideobridge hide
 windowrulev2 = opacity 0.0 override,class:^(xwaylandvideobridge)$
 windowrulev2 = noanim,class:^(xwaylandvideobridge)$
@@ -154,7 +148,28 @@ windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 windowrulev2 = float,class:(clipse)
 windowrulev2 = size 622 652,class:(clipse)
 
+# See https://wiki.hyprland.org/Configuring/Workspace-Rules
 workspace = special:magic, on-created-empty:$term
+# for hyprtags
+workspace = name:1, monitor:DP-1, default:true
+workspace = name:2, monitor:DP-1
+workspace = name:3, monitor:DP-1
+workspace = name:4, monitor:DP-1
+workspace = name:5, monitor:DP-1
+workspace = name:6, monitor:DP-1
+workspace = name:7, monitor:DP-1
+workspace = name:8, monitor:DP-1
+workspace = name:9, monitor:DP-1
+
+workspace = name:1², monitor:DP-2, default:true
+workspace = name:2², monitor:DP-2
+workspace = name:3², monitor:DP-2
+workspace = name:4², monitor:DP-2
+workspace = name:5², monitor:DP-2
+workspace = name:6², monitor:DP-2
+workspace = name:7², monitor:DP-2
+workspace = name:8², monitor:DP-2
+workspace = name:9², monitor:DP-2
 
 # Key bindings
 #
@@ -175,6 +190,8 @@ bind = $mod+SHIFT+CONTROL, R, exec, hyprctl reload
 bind = $alt, F4, killactive,
 # lock screen
 bind = $mod, F12, exec, hyprlock
+# suspend
+bind = $mod+SHIFT, F12, exec, systemctl suspend
 # toggle bar
 bind = $mod, B, exec, killall -SIGUSR1 waybar
 
@@ -333,4 +350,7 @@ bind = $mod, Q, togglespecialworkspace, magic
 bind = $mod+SHIFT, Q, tags-movetoworkspacesilent, special:magic
 
 # for xdg-desktop-portal-hyprland
-exec-once=dbus-update-activation-environment --systemd --all; systemctl --user start hyprland-session.target
+exec-once=dbus-update-activation-environment --systemd --all; systemctl --user restart hyprland-session.target
+
+# for xwayland
+exec=xrandr --output "DP-1" --primary
