Update for new desktop

--- a/dot_config/hypr/hypridle.conf
+++ b/dot_config/hypr/hypridle.conf
@@ -23,12 +23,14 @@ listener {
 }
 
 listener {
-    timeout = 330                                                           # 5.5min
-    on-timeout = hyprctl dispatch dpms off                                  # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on ; screen_brightness_ctl.sh restore # screen on when activity is detected after timeout has fired.
+    timeout = 330                           # 5.5min
+    on-timeout = hyprctl dispatch dpms off  # screen off when timeout has passed
+    # screen on when activity is detected after timeout has fired.
+    on-resume = hyprctl dispatch dpms on ; screen_brightness_ctl.sh restore ; xrandr --output "DP-1" --primary
 }
 
-listener {
-    timeout = 1800                                                      # 30min
-    on-timeout = systemctl suspend ; screen_brightness_ctl.sh restore   # suspend pc
-}
+# Disable suspend for now
+# listener {
+#     timeout = 1800                                                      # 30min
+#     on-timeout = systemctl suspend ; screen_brightness_ctl.sh restore   # suspend pc
+# }
