--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -124,7 +124,7 @@ misc {
     vrr = 2
 
     animate_manual_resizes = true
-    animate_mouse_windowdragging = false
+    animate_mouse_windowdragging = true
 }
 
 # Autoruns
@@ -183,7 +183,7 @@ $alt = ALT
 #
 # exit Hyprland. Hyprland would hang while waiting for swaynag to exit,
 # so I added the killall cmd.
-bind = $mod+SHIFT+CONTROL, Q, exec, hyprctl dispatch exit
+bind = $mod+SHIFT+CONTROL, Q, exec, systemctl --user stop hyprland-session.target; hyprctl dispatch exit
 # reload Hyprland
 bind = $mod+SHIFT+CONTROL, R, exec, hyprctl reload
 # kill focused window
@@ -348,6 +348,14 @@ bind = $mod+SHIFT, Space, togglefloating,
 # Example special workspace (scratchpad)
 bind = $mod, Q, togglespecialworkspace, magic
 bind = $mod+SHIFT, Q, tags-movetoworkspacesilent, special:magic
+
+#
+# Passthrough mode:
+#
+bind = $mod, Escape, submap, passthru
+submap = passthru
+bind = $mod, Escape, submap, reset
+submap = reset
 
 # for xdg-desktop-portal-hyprland
 exec-once=dbus-update-activation-environment --systemd --all; systemctl --user restart hyprland-session.target
