WIP working on some login/remote acess/sleep stuff

--- a/dot_config/hypr/hypridle.conf
+++ b/dot_config/hypr/hypridle.conf
@@ -22,14 +22,15 @@ listener {
     on-timeout = loginctl lock-session            # lock screen when timeout has passed
 }
 
-listener {
-    timeout = 330                           # 5.5min
-    on-timeout = hyprctl dispatch dpms off  # screen off when timeout has passed
-    # screen on when activity is detected after timeout has fired.
-    on-resume = hyprctl dispatch dpms on ; screen_brightness_ctl.sh restore ; xrandr --output "DP-1" --primary
-}
+# turn off monitors
+# listener {
+#     timeout = 330                           # 5.5min
+#     on-timeout = hyprctl dispatch dpms off  # screen off when timeout has passed
+#     # screen on when activity is detected after timeout has fired.
+#     on-resume = hyprctl dispatch dpms on ; screen_brightness_ctl.sh restore ; xrandr --output "DP-1" --primary
+# }
 
-# Disable suspend for now
+# suspend
 # listener {
 #     timeout = 1800                                                      # 30min
 #     on-timeout = systemctl suspend ; screen_brightness_ctl.sh restore   # suspend pc
