--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -189,7 +189,7 @@ bind = $mod+SHIFT+CONTROL, R, exec, hyprctl reload
 # kill focused window
 bind = $alt, F4, killactive,
 # lock screen
-bind = $mod, F12, exec, hyprlock
+bind = $mod, F12, exec, loginctl lock-session
 # suspend
 bind = $mod+SHIFT, F12, exec, systemctl suspend
 # toggle bar
