--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -360,5 +360,9 @@ submap = reset
 # for xdg-desktop-portal-hyprland
 exec-once=dbus-update-activation-environment --systemd --all; systemctl --user restart hyprland-session.target
 
+# for bluetooth session locking
+exec=ydotoold
+exec=blueidle
+
 # for xwayland
 exec=xrandr --output "DP-1" --primary
