Fix blueidle getting multiple instances on hyprland reload

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -361,8 +361,8 @@ submap = reset
 exec-once=dbus-update-activation-environment --systemd --all; systemctl --user restart hyprland-session.target
 
 # for bluetooth session locking
-exec=ydotoold
-exec=blueidle
+exec-once=ydotoold
+exec-once=blueidle
 
 # for xwayland
 exec=xrandr --output "DP-1" --primary
