New monitor thing

--- a/dot_config/hypr/hypridle.conf
+++ b/dot_config/hypr/hypridle.conf
@@ -6,9 +6,11 @@ general {
 }
 
 listener {
-    timeout = 150                                # 2.5min.
-    on-timeout = screen_brightness_ctl.sh lower  # set monitor backlight to minimum, avoid 0 on OLED monitor.
-    on-resume = screen_brightness_ctl.sh restore # monitor backlight restore.
+    timeout = 150   # 2.5min.
+    # set monitor backlight to minimum, avoid 0 on OLED monitor.
+    on-timeout = busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Brightness d 0.3
+    # monitor backlight restore.
+    on-resume = busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Brightness d 1.0
 }
 
 # turn off keyboard backlight
@@ -19,20 +21,21 @@ listener {
 }
 
 listener {
-    timeout = 300                                 # 5min
-    on-timeout = loginctl lock-session            # lock screen when timeout has passed
+    timeout = 300                       # 5min
+    on-timeout = loginctl lock-session  # lock screen when timeout has passed
 }
 
 # turn off monitors
-# listener {
-#     timeout = 330                           # 5.5min
-#     on-timeout = hyprctl dispatch dpms off  # screen off when timeout has passed
-#     # screen on when activity is detected after timeout has fired.
-#     on-resume = hyprctl dispatch dpms on ; screen_brightness_ctl.sh restore ; xrandr --output "DP-1" --primary
-# }
+listener {
+    timeout = 330   # 5.5min
+    # screen off when timeout has passed
+    on-timeout = hyprctl dispatch dpms off DP-1 ; hyprctl dispatch dpms off DP-2 ; hyprctl dispatch dpms on DP-3
+    # screen on when activity is detected after timeout has fired.
+    on-resume = hyprctl dispatch dpms on ; hyprctl dispatch dpms off DP-3 ; xrandr --output "DP-1" --primary
+}
 
 # suspend
 # listener {
-#     timeout = 1800                                                      # 30min
-#     on-timeout = systemctl suspend ; screen_brightness_ctl.sh restore   # suspend pc
+#     timeout = 1800                    # 30min
+#     on-timeout = systemctl suspend    # suspend pc
 # }
