--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -364,5 +364,8 @@ exec-once=dbus-update-activation-environment --systemd --all; systemctl --user r
 exec-once=ydotoold
 exec-once=blueidle
 
+# for screen brightness and stuff
+exec-once=wl-gammarelay-rs
+
 # for xwayland
 exec=xrandr --output "DP-1" --primary
