--- a/dot_config/hypr/ifgdt_monitors.conf
+++ b/dot_config/hypr/ifgdt_monitors.conf
@@ -6,4 +6,7 @@ monitor=,highres,auto,1
 
 monitor=DP-1,highres,1080x480,1
 monitor=DP-2,highres,0x0,1,transform,1
-monitor=DP-3,1920x1080@60,0x0,1,transform,0
+
+# dummy plug
+#monitor=DP-3,1920x1080@60,0x0,1,transform,0
+monitor=DP-3,disable
