--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -103,11 +103,11 @@ dwindle {
     # 0 -> split follows mouse, 1 -> always split to the left (new = left or top) 2 -> always split to the right (new = right or bottom)
     force_split = 2
 
-    no_gaps_when_only = 1
+    # no_gaps_when_only = 1
 }
 
 master {
-    no_gaps_when_only = 1
+    # no_gaps_when_only = 1
 }
 
 gestures {
@@ -147,6 +147,17 @@ windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 # clipse floating window
 windowrulev2 = float,class:(clipse)
 windowrulev2 = size 622 652,class:(clipse)
+
+# "Smart gaps" / "No gaps when only"
+workspace = w[t1], gapsout:0, gapsin:0
+workspace = w[tg1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0
+windowrulev2 = bordersize 0, floating:0, onworkspace:w[t1]
+windowrulev2 = rounding 0, floating:0, onworkspace:w[t1]
+windowrulev2 = bordersize 0, floating:0, onworkspace:w[tg1]
+windowrulev2 = rounding 0, floating:0, onworkspace:w[tg1]
+windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
+windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
 
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules
 workspace = special:magic, on-created-empty:$term
@@ -366,6 +377,12 @@ exec-once=blueidle
 
 # for screen brightness and stuff
 exec-once=wl-gammarelay-rs
+
+# bluetooth applet
+exec-once=blueman-applet
+
+# easy effects
+exec-once=easyeffects --gapplication-service
 
 # for xwayland
 exec=xrandr --output "DP-1" --primary
