--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -194,7 +194,7 @@ $alt = ALT
 #
 # exit Hyprland. Hyprland would hang while waiting for swaynag to exit,
 # so I added the killall cmd.
-bind = $mod+SHIFT+CONTROL, Q, exec, systemctl --user stop hyprland-session.target; hyprctl dispatch exit
+bind = $mod+SHIFT+CONTROL, Q, exec, hyprctl dispatch exit
 # reload Hyprland
 bind = $mod+SHIFT+CONTROL, R, exec, hyprctl reload
 # kill focused window
@@ -371,9 +371,8 @@ submap = reset
 # for xdg-desktop-portal-hyprland
 exec-once=dbus-update-activation-environment --systemd --all; systemctl --user restart hyprland-session.target
 
-# for bluetooth session locking
-exec-once=ydotoold
-exec-once=blueidle
+# top bar here because it misbehaved when used by systemd-service during restarts
+exec-once=waybar
 
 # for screen brightness and stuff
 exec-once=wl-gammarelay-rs
