--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -73,10 +73,13 @@ decoration {
         passes = 1
     }
 
-    drop_shadow = no
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    shadow {
+        enabled = true
+        sharp = false
+        range = 4
+        render_power = 3
+        color = 0xee1a1a1a
+    }
 }
 
 animations {
